--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,4 +39,4 @@ jobs:
           # Remote port
           # REMOTE_PORT: # optional, default is 22
           SOURCE: ./dist
-          TARGET: /home/test
+          TARGET: ./test
