--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,6 @@ jobs:
           # Remote user
           REMOTE_USER: ${{ secrets.USERNAME }}
           # Remote port
-          # REMOTE_PORT: # optional, default is 22
+          REMOTE_PORT: # optional, default is 22
           SOURCE: ./dist
           TARGET: /usr/local/nginx/html/h5_demo/dist
