--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,10 +33,8 @@ jobs:
           # 登陆ssh时候的 sshkey
           SSH_PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
           # Remote host
-          REMOTE_HOST: ${{ secrets.HOST }}
+          REMOTE_HOST: 8.134.143.181
           # Remote user
-          REMOTE_USER: ${{ secrets.USERNAME }}
-          # Remote port
-          REMOTE_PORT: # optional, default is 22
+          REMOTE_USER: root
           SOURCE: ./dist
           TARGET: /usr/local/nginx/html/github_ci
